pgbouncer-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.18.0 (06a2e56)
  creationTimestamp: null
  labels:
    io.kompose.service: pgbouncer
  name: pgbouncer
spec:
  replicas: 3
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: pgbouncer
    spec:
      containers:
      - image: mapcentia/pgbouncer
        name: pgbouncer
        ports:
        - containerPort: 5433
        resources: {}
      restartPolicy: Always
status: {}
